--- a/styles/scss/partials/_rehabilitering.scss
+++ b/styles/scss/partials/_rehabilitering.scss
@@ -1,59 +1,24 @@
 .rehabilitering__h1 {
     margin-bottom: 15px;
 
-    @include respond-to('medium') {
+    @include respond-to('small') {
         margin-bottom: 25px;
     }
 }
 
 // Rehabilitering
-.rehabilitering-container {
-    @include respond-to('small') {
-        display: flex;
-        justify-content: space-between;
-    }
-}
-
-.rehabilitering__text-container {
-    @include respond-to('small') {
-        flex: 45%;
-    }
-}
-
 .rehabilitering__img-1{
-    @include respond-to('small') {
-        flex: 55%;
-        max-width: 300px;
-        position: relative;
-        top: 50px;
-        margin-left: 30px;
-    }
-
-    @include respond-to('large') {
-        max-width: 450px;
-        top: -20px;
-    }
-
-    @include respond-to('x-large') {
-        max-width: 500px;
-        top: -50px;
+    @include respond-to('medium') {
+        margin: 50px 0;
     }
 }
 
 .rehabilitering__p--1 {
     margin-bottom: 10px;
-
-    @include respond-to('large') {
-        max-width: 700px;
-    }
 }
 
 .rehabilitering__p--2 {
     margin-bottom: 15px;
-
-    @include respond-to('large') {
-        max-width: 700px;
-    }
 }
 
 // Kamerainspeksjon
@@ -75,10 +40,6 @@
 
 .kamerainspeksjon__p--1 {
     margin-bottom: 15px;
-
-    @include respond-to('large') {
-        max-width: 700px;
-    }
 }
 
 .kamerainspeksjon__btn-container {
