--- a/styles/scss/partials/_404.scss
+++ b/styles/scss/partials/_404.scss
@@ -1,82 +1,42 @@
-.not-found {
-    overflow: hidden;
-    height: 100vh;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+.notFound-content {
+    margin: 50px auto;
+    max-width: 90%;
+
+    @include respond-to('medium') {
+        height: 60vh;
+        display: flex;
+    }
 }
 
-.not-found__house-shape {
-    position: absolute;
-    z-index: -1;
-    height: 1000px;
-    width: 1000px;
-    left: -55%;
-    margin-top: 50px;
-    top: 100px;
+.notFound__p {
+    margin: 20px 0 40px 0;
 
     @include respond-to('small') {
-        left: -35%;
-    }
-
-    @include respond-to('medium') {
-        width: 1500px;
-        heihgt: 1500px;
-        left: -55%;
-    }
-
-    @include respond-to('large') {
-        left: -35%;
+        max-width: 600px;
     }
 }
 
-.not-found__img-container {
-    display: flex;
-    justify-items: center;
-    position: relative;
-    top: 80px;
+.notFound__btn-container {
 
     @include respond-to('small') {
-        margin-left: 50px;
+        display: flex;
     }
+     
+    .secondary-btn {
+        margin-bottom: 30px;
 
-    @include respond-to('medium') {
-        top: 150px;
-        left: 200px;
-    }
-
-    @include respond-to('large') {
-        margin-left: 200px;
-    }
-}
-
-.not-found__img  {
-    width: 130px;
-    height: 130px;
-    margin: 30px 10px;
-
-    @include respond-to('medium') {
-       width: 220px;
-       height: 220px;
+        @include respond-to('small') {
+            margin-right: 30px;
+        }
     }
 }
 
-.not-found__content {
-    width: 100%;
-    max-width: 500px;
-    margin-top: 20px;
-    position: absolute;
-    top: 350px;
-    margin: 0 15px;
+.notFund__img-container {
+    display: none;
 
     @include respond-to('medium') {
-        top: 430px;
-        left: 20px;
+        display: contents;
+        position: absolute;
+        min-width: 500px;
     }
-}
-
-.not-found__p {
-    margin: 10px 0;
 }
