--- a/styles/scss/partials/_btn.scss
+++ b/styles/scss/partials/_btn.scss
@@ -51,6 +51,7 @@
     position: relative;
     transition: .2s ease-in-out;
     z-index: 4;
+    cursor: pointer;
 
     a {
         display: flex;
