--- a/styles/scss/partials/_ildstederOgOvn.scss
+++ b/styles/scss/partials/_ildstederOgOvn.scss
@@ -5,7 +5,7 @@
 // Ildsteder
 .ildsteder__text-container {
     margin-bottom: 20px;
-    margin-top: 50px;
+    margin-top: 25px;
 
     .ildsteder__text--h3 {
         margin-bottom: 5px;
@@ -19,38 +19,36 @@
     @include respond-to('x-small') {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: start;
         flex-grow: 2;
     }
 
     @include respond-to('small') {
         flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    @include respond-to('large') {
-        justify-content: flex-start;
+        justify-content: start;
     }
 
     .ildsteder__product-container {
         margin: 30px auto;
         position: relative;
 
+        border: 1xp solid red;
+
         @include respond-to('x-small') {
-            width: 170px;
+            width: 140px;
             margin: 30px 5% 30px 0;
             height: 350px;
         }
 
         @include respond-to('small') {
-            width: 200px;
+            width: 150px;
             margin: 30px 30px 30px 0;
             height: 395px;
         }
 
         @include respond-to('large') {
             height: 465px;
-            width: 250px;
+            width: 170px;
         }
 
         @include respond-to('x-large') {
@@ -86,11 +84,9 @@
         color: $orange;
         position: absolute;
         z-index: 5;
-        // bottom: 120px;
         top: 0;
         right: 0;
         background-color: rgba(255, 255, 255, 0.6);
-        // padding: 5px 10px;
         backdrop-filter: blur(5px);
         width: 70px;
         height: 27px;
@@ -119,12 +115,6 @@
 // Ovnsmontering
 .ovnsmontering {
     margin: 50px 0;
-    
-    @include respond-to('medium') {
-        display: flex;
-        justify-content: space-between;
-        margin: 150px 0 200px 0;
-    }
 
     @include respond-to('x-large') {
         margin-bottom: 300px;
@@ -162,44 +152,12 @@
         right: 0;
         margin-left: 0;
         margin-right: 0;
-        justify-content: center;
-    }
-
-    @include respond-to('medium') {
-        display: inline-block;
     }
 
     .ovnsmontering__img1 {
-        @include respond-to('medium') {
-            width: 175px;
-            position: absolute;
-            right: 200px;
-            z-index: 3;
-            bottom: -150px;
-        }
-
-        @include respond-to('x-large') {
-            width: 200px;
-            position: absolute;
-            right: 225px;
-            z-index: 3;
-            bottom: -200px;
-        }
-    }
-
-    .ovnsmontering__img2 {
-        @include respond-to('medium') {
-            width: 250px;
-            position: absolute;
-            right: 0;
-            z-index: 1;
-        }
-
-        @include respond-to('x-large') {
-            width: 275px;
-            position: absolute;
-            right: 0;
-            z-index: 1;
+        @include respond-to('small') {
+            position: relative;
+            margin-right: 10px;
         }
     }
 }
