--- a/styles/scss/partials/_stalpipe.scss
+++ b/styles/scss/partials/_stalpipe.scss
@@ -1,91 +1,46 @@
 .stålpipe__h1 {
-    margin-bottom: 15px;
-}
-
-.stålpipe-container {
-    @include respond-to('small') {
-        display: flex;
-        justify-content: space-between;
-    }
-}
-
-.stålpipe__text-container {
-    @include respond-to('small') {
-        flex: 55%;
-        padding-bottom: 100px;
-    }
-
-    @include respond-to('large') {
-        padding-bottom: 150px;
-    }
-
-    @include respond-to('x-large') {
-        padding-bottom: 200px;
-    }
+    margin-bottom: 25px;
 }
 
 .stålpipe__p--1 {
     margin-bottom: 15px;
-
-    @include respond-to('large') {
-        max-width: 700px;
-    }
-}
-
-.stålpipe__imgs {
-    display: flex;
-    
-    @include respond-to('small') {
-        display: inline-block;
-        margin-left: 20px;
-        flex: 45%;
-        position: relative;
-    }
-}
-
-.stålpipe__img-1 {
-    @include respond-to('small') {
-        max-width: 150px;
-        position: absolute;
-        right: 170px;
-        top: 220px;
-        z-index: 2;
-    }
-
-    @include respond-to('large') {
-        max-width: 200px;
-        right: 220px;
-    }
-
-    @include respond-to('x-large') {
-        max-width: 230px;
-        right: 250px;
-        top: 230px;
-    }
-}
-
-.stålpipe__img-2 {
-    @include respond-to('small') {
-        max-width: 200px;
-        position: absolute;
-        right: 0;
-        z-index: 1;
-    }
-
-    @include respond-to('large') {
-        max-width: 250px;
-        top: -50px;
-    }
-
-    @include respond-to('x-large') {
-        max-width: 280px;
-    }
 }
 
 .stålpipe__btn-container {
     padding-bottom: 50px;
 
     @include respond-to('medium') {
-        margin-top: 30px;
+        margin-top: 30px; 
+    }
+}
+
+.stålpipe__imgs {
+    display: flex;
+
+    @include respond-to('small') {
+        margin-bottom: 50px;
+    }
+}
+
+.stålpipe__img-1 {
+    @include respond-to('small') {
+        position: relative;
+        flex: 60%;
+        right: 20px;
+        z-index: 1;
+    }
+}
+
+.stålpipe__img-2 {
+    @include respond-to('small') {
+        position: relative;
+        flex: 30%;
+        left: 20px;
+        top: 150px;
+        z-index: 2;
+    }
+
+    @include respond-to('x-large') {
+        top: 200px;
     }
 }
