--- a/styles/scss/partials/_btn.scss
+++ b/styles/scss/partials/_btn.scss
@@ -129,7 +129,7 @@
 }
 
 // Buttons
-button {
+.btn {
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.20) 0px 3px 6px;
     display: inline-block;
