--- a/styles/scss/partials/_about.scss
+++ b/styles/scss/partials/_about.scss
@@ -1,21 +1,5 @@
 .about__h1 {
-    margin-bottom: 15px;
-
-    @include respond-to('large') {
-        position: relative;
-        top: 100px;
-    }
-
-    @include respond-to('x-large') {
-        // top: 125px;
-    }
-}
-
-.about__text-img-container {
-    @include respond-to('medium') {
-        display: flex; 
-        justify-content: space-between;
-    }
+    margin-bottom: 25px;
 }
 
 .about__text-btn {
@@ -23,38 +7,14 @@
         flex: 65%;
         margin-right: 30px;
     }
-
-    @include respond-to('large') {
-        margin-top: 100px;
-    }
-
-    @include respond-to('x-large') {
-        // margin-top: 125px;
-    }
 }
 
 .about__p--1 {
     margin-bottom: 10px;
-    width: 55%;
-    max-width: 300px;
-
-    @include respond-to('small') {
-        max-width: 400px;
-    }
-
-    @include respond-to('medium') {
-        max-width: 550px;
-        width: 100%;
-    }
 }
 
 .about__p--2 {
     margin-bottom: 15px;
-
-    @include respond-to('medium') {
-        margin-bottom: 30px;
-        max-width: 550px;
-    }
 }
 
 .about__btn {
@@ -62,51 +22,39 @@
 }
 
 .about__img-some {
+    position: relative;
     @include respond-to('medium') {
         flex: 35%;
-    }
-
-    @include respond-to('large') {
-        flex: 60%;
-        position: relative;
-        max-width: 650px;
-    }
-
-    .about__img {
-        @include respond-to('large') {
-            max-width: 350px;
-            margin: 0 auto;
-        }
-
-        @include respond-to('x-large') {
-            max-width: 375px;
-        }
     }
 }
 
 // Circle information
 .about__circle {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    right: 5px;
+    top: -80px;
     z-index: 3;
     padding: 20px 10px;
     width: 120px;
     text-align: center;
 
+    @include respond-to('x-small') {
+        right: 20px;
+    }
+
     @include respond-to('medium') {
         width: 125px;
-        top: 120px;
+        top: 50px;
     }
 
     @include respond-to('large') {
         right: 90px;
-        top: 0;
+        // top: 0;
     }
 
-    @include respond-to('x-large') {
-       right: 120px;
-    }
+    // @include respond-to('x-large') {
+    //    right: 120px;
+    // }
 }
 
 // SoMe
