--- a/styles/scss/partials/_ildstederOgOvn.scss
+++ b/styles/scss/partials/_ildstederOgOvn.scss
@@ -20,7 +20,6 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: start;
-        flex-grow: 2;
     }
 
     @include respond-to('small') {
@@ -29,30 +28,22 @@
     }
 
     .ildsteder__product-container {
-        margin: 30px auto;
         position: relative;
-
-        border: 1xp solid red;
+        margin-right: 20px;
 
         @include respond-to('x-small') {
-            width: 140px;
-            margin: 30px 5% 30px 0;
-            height: 350px;
+            width: 40%;
         }
 
         @include respond-to('small') {
-            width: 150px;
-            margin: 30px 30px 30px 0;
-            height: 395px;
+            width: 30%;
         }
 
         @include respond-to('large') {
-            height: 465px;
-            width: 170px;
         }
 
         @include respond-to('x-large') {
-            margin: 30px 50px 30px 0;
+            width: 20%;
         }  
     }
 
@@ -62,22 +53,6 @@
 
     .ildsteder__text--p {
         margin-bottom: 10px;
-    }
-
-    .ildsteder__btn-center {
-        display: flex;
-        justify-content: center;
-
-        @include respond-to('large') {
-            align-self: flex-end;
-        }
-    }
-
-    .ildsteder__btn {
-        @include respond-to('x-small') {
-            position: absolute;
-            bottom: 0;
-        }
     }
 
     .ildsteder__recommend {
